# tquality-py-selenium

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.ru.md  pyproject.toml  report.xml
schema/: config.schema.json
scripts/: install-hooks.sh
src/tquality_selenium/: __init__.py  browser.py  cli.py  config.py  container.py  os_utils.py  page_source_plugin.py  schema.py  screencast_provider.py  screenshot_provider.py
src/tquality_selenium/elements/: __init__.py  base_element.py  button.py  by.py  by_kind.py  checkbox.py  input.py  label.py
src/tquality_selenium/pages/: __init__.py  base_form.py
src/tquality_selenium/services/: __init__.py  collection_factory.py  element_factory.py  element_waiter.py  js_actions.py  lazy_elements.py  style_property.py  waiter.py
src/tquality_selenium/utils/: locator_utils.py
tests/: __init__.py  test_browser_healthcheck.py  test_browser_os_support.py  test_cli.py  test_config.py  test_container.py  test_elements.py  test_js_actions_smoke.py  test_page_source_plugin.py  test_schema.py  test_screenshot_provider.py
