[project]
name = "tquality-py-selenium"
dynamic = ["version"]
description = "Selenium integration for the tquality test automation framework, built on tquality-py-core."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "ООО «Точка качества»"}]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = [
    "testing",
    "test-automation",
    "qa",
    "selenium",
    "webdriver",
    "page-object",
    "allure",
    "tquality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Pytest",
    "Typing :: Typed",
]
dependencies = [
    "tquality-py-core>=0.1.4",
    "selenium>=4.25",
    "undetected-chromedriver>=3.5",
    # Python 3.12 удалил distutils из stdlib, а undetected-chromedriver
    # импортирует distutils.version.LooseVersion. setuptools >= 60 возвращает
    # distutils как shim.
    "setuptools>=60",
    # Pillow - даунскейл кадров screencast'а перед кодированием в webm.
    "pillow>=10",
    # imageio + imageio-ffmpeg - кодирование кадров в webm (VP9). ffmpeg-
    # бинарник ставится вместе с imageio-ffmpeg (Linux/macOS/Windows), внешних
    # зависимостей не требует.
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/Tquality-ru/tquality-py-selenium"
Repository = "https://github.com/Tquality-ru/tquality-py-selenium"
Issues = "https://github.com/Tquality-ru/tquality-py-selenium/issues"
Changelog = "https://github.com/Tquality-ru/tquality-py-selenium/blob/master/CHANGELOG.md"

[project.scripts]
tquality-selenium-config = "tquality_selenium.cli:main"

[project.entry-points.pytest11]
tquality_selenium_page_source = "tquality_selenium.page_source_plugin"

[dependency-groups]
dev = [
    "mypy>=1.11",
    # pytest-timeout: автообрыв зависших тестов с tracebackом всех потоков
    # вместо ожидания 2h-таймаута job'а на CI. Метод `thread` применяется
    # ко всем тестам глобально через `[tool.pytest.ini_options].timeout`.
    "pytest-timeout>=2.3",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Версия берется из последнего git-тега вида vX.Y.Z.
# Сборка вне git-репо (например, из sdist) возьмет версию из PKG-INFO.
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "only-version"

[tool.hatch.build.targets.wheel]
packages = ["src/tquality_selenium"]

# В sdist кладем только источники и документацию.
# Иначе CI-артефакты (.uv-cache, .venv) засасываются со внешними симлинками.
[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "schema",
    "scripts",
    "README.md",
    "README.ru.md",
    "LICENSE",
    "NOTICE",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
# 120 секунд должно с запасом покрывать любой smoke (поднять браузер +
# открыть data-URL); если тест висит дольше - почти наверняка проблема
# в окружении/драйвере, а не в логике, и job упирается в долгий timeout.
timeout = 120
timeout_method = "thread"
markers = [
    "macos: тесты требуют macOS-runner (все 5 браузеров установлены)",
    "windows: тесты требуют Windows",
    "linux: тесты требуют Linux",
    "chrome: тесты требуют установленный Chrome",
    "firefox: тесты требуют установленный Firefox",
    "edge: тесты требуют установленный Edge",
    "safari: тесты требуют установленный Safari (только macOS)",
    "undetected: тесты требуют undetected-chromedriver и Chrome",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/tquality_selenium", "tests"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "undetected_chromedriver",
    "undetected_chromedriver.*",
    "dependency_injector",
    "dependency_injector.*",
    "PIL",
    "PIL.*",
    "imageio",
    "imageio.*",
]
ignore_missing_imports = true
